# SysTem

./: Cargo.toml  README.md  build.rs  sys-tem.rc
src/: app.rs  config.rs  hotkey.rs  main.rs
src/modules/: gitkey.rs  mod.rs  terminal.rs
